2023-09-05T00:35:00Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6078768323 # 1880
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-05
* notice: last 14d: unq all: 6 23
* notice: prev accum: outdated-unq outdated-all / unq all: 1551 5038 / 1565 5060
* notice: next accum: outdated-unq outdated-all / unq all: 1551 5038 / 1565 5061
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2023-09-04]

2023-09-04T16:09:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6075681889 # 1879
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-04
* notice: last 14d: unq all: 6 22
* notice: prev accum: outdated-unq outdated-all / unq all: 1551 5038 / 1564 5059
* notice: next accum: outdated-unq outdated-all / unq all: 1551 5038 / 1565 5060
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [] / [2023-09-04]

2023-09-04T08:10:42Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6070820668 # 1878
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-04
* notice: last 14d: unq all: 5 21
* notice: prev accum: outdated-unq outdated-all / unq all: 1550 5037 / 1563 5058
* notice: next accum: outdated-unq outdated-all / unq all: 1551 5038 / 1564 5059
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2023-08-21] / [2023-09-04]

2023-09-04T00:36:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6067686151 # 1877