@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-05T00:35:00Z",
+  "timestamp" : "2023-09-05T08:10:27Z",
   "count_outdated" : 5038,
   "uniques_outdated" : 1551,
-  "count" : 5061,
-  "uniques" : 1565,
+  "count" : 5062,
+  "uniques" : 1566,
   "clones" : [
     {
       "timestamp": "2023-08-25T00:00:00Z",
@@ -85,6 +85,15 @@
       "uniques": 2,
       "uniques_minmax": [ 1, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2023-09-05T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
