@@ -1,5 +1,5 @@
 {
-  "count": 23,
+  "count": 24,
   "uniques": 6,
   "clones": [
     {
@@ -46,6 +46,11 @@
       "timestamp": "2023-09-04T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2023-09-05T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
